<resources>
    <string name="app_name">SpaceXMobile</string>}

    //Pantalla Inicio
    <string name="toolbar_home_titulo">Home</string>
    <string name="boton_ver_noticias">Rockets</string>
    <string name="toolbar_acerca_de">About</string>

    //Pantalla Acerca de
    <string name="equipo_desarrollo">Equipo de desarrollo</string>
    <string name="informacion_equipo">Esta aplicación fue desarrollada por Samuel Quiroz (Programador), Diego Santander (Programador) y Benjamín Rodríguez (Diseñador)</string>
    <string name="informacion_aplicacion">Esta aplicación implementa una conexión a una API sobre SpaceX, en esta aplicación se muestran noticias y novedades relacionadas a SpaceX.</string>

    //Pantalla de noticias
    <string name="toolbar_noticias">Noticias</string>

    //Pantalla de cohetes
    <string name="toolbar_detalle_noticia">Detalle noticia</string>

    //Defaults values CardView news
    <string name="header_cv">Header of the new</string>
    <string name="description_cv">A little description</string>

    //Defaults values CardView RocketInfo
    <string name="header_cvRocketInfo">Header of the Rocket info</string>
    <string name="type_cvRocketInfo">Rocket</string>
    <string name="country_cvRocketInfo">United State</string>

    //Defaults values Details rockets
    <string name="dr_Name">Falcon</string>
    <string name="dr_PrevCountry">Country: </string>
    <string name="dr_Country">United States</string>
    <string name="dr_PrevCostPerLaunch">Cost per launch: </string>
    <string name="dr_CostPerLaunch">60000</string>
    <string name="dr_PrevCompany">Company: </string>
    <string name="dr_Company">SpaceX</string>
    <string name="dr_Description">It is a Rockets</string>

</resources>