<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/cv_rocketInfo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:layout_marginEnd="16dp"
    card_view:cardBackgroundColor = "#227C9D"
    card_view:cardCornerRadius="20dp"
    card_view:elevation="6dp"
    card_view:contentPadding="4dp">
    <RelativeLayout
        android:id="@+id/card_view_layoutRocketInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:fadingEdgeLength="10dp"
        android:padding="16dp">


        <TextView
            android:id="@+id/cv_headerRocketInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/header_cvRocketInfo" />

        <TextView
            android:id="@+id/cv_typeRocketInfo"
            android:layout_width="154dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cv_headerRocketInfo"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/type_cvRocketInfo" />
        <TextView
            android:id="@+id/cv_countryRocketInfo"
            android:layout_width="154dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cv_typeRocketInfo"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/country_cvRocketInfo" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>